tests/NormalTests/paczka1/small_fuzzy/81921562.err
Error in line 1: N3pT S329 53,5
Error in line 2: yTof4 A935 65,4
Error in line 4: 0M9Zuhm A935 25,5
Error in line 9: 0M9Zuhm A484 48,3
Error in line 5: N3pT S735 93,4
